[package]
name = "ts_observing_environment"
version = "0.3.0"
edition = "2021"
description = "Package to manage observing environment."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.20.0"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
gethostname = "1.1.0"
git2 = "0.20.2"
log = "0.4.28"
lsst_efd_client = "0.1.1"
rand = "0.9.2"
rdkafka = { version = "0.38.0", features = ["cmake-build", "ssl", "gssapi"]}
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
schema_registry_converter = { version = "4.6.0", features = ["avro", "blocking"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
simple_logger = "5.0.0"
thiserror = "2.0.17"

[dev-dependencies]
once_cell = "1.21.3"
